<resources>
    <string name="app_name">Globus</string>
    <string name="title_activity_map_view">Map</string>

    <string name="navigation_map">Home</string>
    <string name="latest_updates">Updates</string>
    <string name="contacts">Contacts</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="locations">Locations</string>
    <string name="description">Description</string>

    <string name="locations_of">Locations of</string>
    <string name="old_location">Old location</string>
    <string name="new_location">New location</string>
    <string name="user">User</string>
    <string name="user_moved_on_date">Moved on: %1$s</string>
    <string name="added_at">Added at: %1$s</string>

    <string name="name">Name</string>
    <string name="email">Email</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="required">Required</string>

    <string name="create_user">Create New User</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email_hint">Type in the email address you want to register with</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="signed_out">Signed Out</string>

    <string name="request_sent">Request sent</string>
    <string name="location_created">Location created</string>
    <string name="location_edited">Location edited</string>

    <string name="last_name">LastName</string>
    <string name="first_name">FirstName</string>
    <string name="cancel">Cancel</string>
    <string name="status">Status</string>
    <string name="front_page_message">Sign in with your credentials or use \n alternate sign in method</string>
    <string name="type_in_your_password">Type in your password</string>

    <string name="remove_contact">Remove contact</string>
    <string name="remove_location">Remove location</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sign_out">Sign Out</string>

    <string name="facebook_app_id">273035953395250</string>
    <string name="fb_login_protocol_scheme">fb273035953395250</string>
    <string name="success">Success!!</string>
    <string name="create_m">createUserWithEmail:success</string>
    <string name="create_account">createAccount:</string>
    <string name="createUWithEmail_failure">createUserWithEmail:failure</string>
    <string name="handleFacebookAccessToken">handleFacebookAccessToken:</string>
    <string name="signInWithCredential_success">signInWithCredential:success</string>
    <string name="signInWithCredential_failure">signInWithCredential:failure</string>
    <string name="signInWithEmail_success">signInWithEmail:success</string>
    <string name="signInWithEmail_failure">signInWithEmail:failure</string>
    <string name="firebaseAuthWithGoogle">firebaseAuthWithGoogle:</string>
    <string name="signInWithCredential_success">signInWithCredential:success</string>
    <string name="signInWithCredential_failure">signInWithCredential:failure</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="public_profile">public_profile</string>
    <string name="facebook_onSuccess">facebook:onSuccess:</string>
    <string name="facebook_onCancel">facebook:onCancel</string>
    <string name="facebook_onError">facebook:onError</string>
</resources>